# AdaLUTNet

Python/: architectures.py  evaluate.py  export_onnx.py  inference.py  loss_layer.py  options.pkl  pipeline.py  train.py  utils.py
Python/checkpoints/Ada1DLUT/: config.txt
Python/plugins/intensity_transform_1dlut/: setup.py
Python/plugins/intensity_transform_1dlut/csrc/: intensity_transform_1dlut.cpp  intensity_transform_1dlut_backward.cu  (+1 more)
deployment/IR/: Ada1DLUT_dynamic.onnx  Ada1DLUT_dynamic_sim.onnx
deployment/arm/Android_MNN/: build.gradle
deployment/arm/Android_MNN/app/src/main/jni/: CMakeLists.txt  ada1dlut_net_jni.cpp
deployment/arm/Android_MNN/app/src/main/jni/mnn/include/MNN/: Interpreter.hpp  Tensor.hpp
deployment/arm/Android_MNN/app/src/main/jni/opencvtiny/: make.sh
deployment/arm/Android_MNN/app/src/main/jni/opencvtiny/arm64-v8a/sdk/native/jni/: OpenCV-arm64-v8a.mk
deployment/arm/Android_MNN/app/src/main/jni/opencvtiny/arm64-v8a/sdk/native/jni/abi-arm64-v8a/: OpenCVModules-release.cmake  OpenCVModules.cmake
deployment/arm/Android_MNN/app/src/main/jni/opencvtiny/armeabi-v7a/sdk/native/jni/: OpenCV.mk
deployment/arm/Android_MNN/app/src/main/jni/opencvtiny/armeabi-v7a/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules-release.cmake
deployment/arm/Android_MNN/app/src/main/jni/opencvtiny/armeabi-v7a/sdk/native/jni/include/opencv2/: cvconfig.h  opencv_modules.hpp
deployment/x64/MNN/: Ada1DLUT_dynamic.mnn  README.md  run.sh  xmake.lua
deployment/x64/onnxruntime/: evaluate_precision.py  inference.py
(+8 files in other folders)
